style: mini-fixes with overflows, and dimensions

--- a/client_lourd/src/app/components/quiz-related/quiz-creation/question-form/question-form.component.scss
+++ b/client_lourd/src/app/components/quiz-related/quiz-creation/question-form/question-form.component.scss
@@ -16,16 +16,19 @@ $primary-color: #00115a;
     padding: 1.2rem;
 
     .question-info-section {
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         .question-text {
-            width: 70%;
-            margin-left: 4%;
+            width: calc(95% - 220px);
         }
         .question-score {
-            width: 25%;
-            margin-left: 5%;
+            width: 100px;
+        }
+        .question-type {
+            display: flex;
+            flex-direction: column;
         }
         #options {
             font-size: medium;
@@ -81,6 +84,10 @@ $primary-color: #00115a;
     gap: 1rem;
     padding: 1rem;
     width: 100%;
+
+    button {
+        padding: 0.5rem;
+    }
 }
 .button-section {
     width: 25%;
@@ -147,24 +154,29 @@ $primary-color: #00115a;
 .generate-question-section {
     display: flex;
     flex-direction: column;
-    margin-top: 1rem;
     width: 100%;
     position: relative;
-
+    align-items: center;
+    justify-content: center;
     .generate-button {
-        align-self: flex-end;
         padding: 0.5rem 1rem;
         cursor: pointer;
         transition: background-color 0.3s ease;
-        margin-bottom: 1rem;
-
-        &:hover {
-        }
 
         i {
             margin-right: 0.5rem;
         }
     }
+}
+
+.generate-sect-wrapper {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding-bottom: 10px;
 }
 
 .reformulation-preview {
@@ -203,37 +215,17 @@ $primary-color: #00115a;
         justify-content: flex-end;
 
         .accept-button {
-            background-color: var(--tertiary-color);
-            color: var(--text-color);
-            border: none;
             padding: 0.5rem 1rem;
             border-radius: 0.5rem;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            box-shadow: 0 0 5px var(--tertiary-color);
-
-            &:hover {
-                background-color: color-mix(in srgb, var(--tertiary-color) 80%, white);
-            }
-
             i {
                 margin-right: 0.5rem;
             }
         }
 
         .reject-button {
-            background-color: var(--primary-color);
-            color: var(--text-color);
-            border: none;
             padding: 0.5rem 1rem;
             border-radius: 0.5rem;
             cursor: pointer;
-            transition: background-color 0.3s ease;
-            box-shadow: 0 0 5px var(--tertiary-color);
-
-            &:hover {
-                background-color: color-mix(in srgb, var(--primary-color) 80%, white);
-            }
 
             i {
                 margin-right: 0.5rem;
